--- a/web/themes/oc_patterns/templates/zzz-custom/forms/radios.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/forms/radios.html.twig
@@ -11,4 +11,4 @@
  */
 #}
 {% import "@base/global/05-macros/macros.twig" as styles %}
-<div{{ attributes.addClass(styles.radioElements) }}>{{ children }}</div>
+<div{{ attributes.addClass(styles.radioElements) }}>{{- children -}}</div>
