--- a/web/themes/oc_patterns/templates/zzz-custom/media templates/field--media--field-caption.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/media templates/field--media--field-caption.html.twig
@@ -38,6 +38,6 @@
  * @ingroup themeable
  */
 #}
-{% for item in items %}
-	<figcaption>{{ item.content }}</figcaption>
-{% endfor %}
+{%- for item in items -%}
+	<figcaption>{{- item.content -}}</figcaption>
+{%- endfor -%}
