--- a/web/themes/oc_patterns/templates/zzz-custom/media templates/field--media--field-media-file.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/media templates/field--media--field-media-file.html.twig
@@ -39,6 +39,6 @@
  */
 #}
 {# removes the surrounding unnecessary div from files so can be inline in wysiwyg #}
-{% for item in items %}
-	{{ item.content }}
-{% endfor %}
+{%- for item in items -%}
+	{{- item.content -}}
+{%- endfor -%}
