--- a/web/themes/oc_patterns/templates/zzz-custom/search-page/block--views-exposed-filter-block--site-search-search-results.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/search-page/block--views-exposed-filter-block--site-search-search-results.html.twig
@@ -15,7 +15,7 @@
 	<div class="t-search-close"><a href="#" class="close-search" role="button" aria-label="toggle-search-close">X</a><span class="close-text">close</span></div>
 	<div class="search-form-wrapper" aria-expanded="false">
 		<form action="/site-search" method="get" id="views-exposed-form-site-search-search-results" accept-charset="UTF-8" data-drupal-form-fields="edit-search-api-fulltext">
-			{{ content.search_api_fulltext }}
+			{{- content.search_api_fulltext -}}
 			<div data-drupal-selector="edit-actions" id="edit-site-search-actions" class="form-actions js-form-wrapper form-wrapper">
 				<input id="edit-submit-site-search" class="button js-form-submit form-submit" data-drupal-selector="edit-submit-site-search" value="search" type="submit">
 				<i class="fa fa-search" aria-hidden="true"></i>
