--- a/web/themes/oc_patterns/templates/zzz-custom/user/user.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/user/user.html.twig
@@ -17,7 +17,7 @@
  */
 #}
 <article{{ attributes.addClass('user-dashboard') }}>
-  {% if content %}
+  {%- if content -%}
     {{- content -}}
-  {% endif %}
+  {%- endif -%}
 </article>
