--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--paragraph--field-section-widgets.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/field--paragraph--field-section-widgets.html.twig
@@ -46,8 +46,8 @@ set classes = [
 {{ attach_library('oc_patterns/widgets') }}
 
 <div{{ attributes.addClass(classes) }}>
-	{% for item in items %}
-		{{ item.content }}
-	{% endfor %}
+	{%- for item in items -%}
+		{{- item.content -}}
+	{%- endfor -%}
 </div>
 
