--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/events-by-category/views-view-fields--oc-widgets--events-by-category.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/events-by-category/views-view-fields--oc-widgets--events-by-category.html.twig
@@ -30,7 +30,7 @@
  */
 #}
 <div class="event-item">
-	<h4><a href="{{ fields.path.content|striptags|trim }}">{{ fields.title.content }}</a></h4>
-	{{ fields.field_oc_date.content }}
-	{{ fields.body.content }}
+	<h4><a href="{{ fields.path.content|striptags|trim }}">{{- fields.title.content -}}</a></h4>
+	{{- fields.field_oc_date.content -}}
+	{{- fields.body.content -}}
 </div>
