--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/lightbox/paragraph--lightbox-gallery.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/lightbox/paragraph--lightbox-gallery.html.twig
@@ -49,15 +49,13 @@
 		{% block plwidgetopen %}{# patternlab specifc html #}{% endblock %}
 			
 			{% block lightboxContent %}
-				{% for key, item in content.field_oc_image_multi if key|first != '#' %}
-					{% if paragraph.field_oc_image_multi[key].target_id > 0 %}
-							<div class="featherlight-gal image-gal" href="#item{{paragraph.field_oc_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}"> {{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large_thumb') }}
-	   
-								<div class="featherlight-hidden" id="item{{paragraph.field_oc_image_multi[key].target_id}}"> {{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large') }} </div>
-
-							</div>
-					{% endif %}
-				{% endfor %}
+				{%- for key, item in content.field_oc_image_multi if key|first != '#' -%}
+					{%- if paragraph.field_oc_image_multi[key].target_id > 0 -%}
+						<div class="featherlight-gal image-gal" href="#item{{paragraph.field_oc_image_multi[key].target_id}}" rel="gallery-{{paragraph.id.value}}">{{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large_thumb') }}
+							<div class="featherlight-hidden" id="item{{paragraph.field_oc_image_multi[key].target_id}}">{{ drupal_entity('media', paragraph.field_oc_image_multi[key].target_id, 'large') }}</div>
+						</div>
+					{%- endif -%}
+				{%- endfor -%}
 			{% endblock %}
 
 		{% block plwidgetclose %}{# patternlab specifc html #}{% endblock %}
