--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/slideshow/paragraph--slideshow.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/slideshow/paragraph--slideshow.html.twig
@@ -41,7 +41,7 @@
 
 {% block widgetContent %}
 	{{ attach_library('oc_patterns/slideshow') }}
-	{{ content.field_widget_title }}
-	{{ content.field_oc_image_multi }}
+	{{- content.field_widget_title -}}
+	{{- content.field_oc_image_multi -}}
 {% endblock %}
 
