--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/view-placer/paragraph--admin-view-placer.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/view-placer/paragraph--admin-view-placer.html.twig
@@ -50,7 +50,7 @@
 	{% set displayName = content.field_display_machine_name.0['#context'].value|clean_class %}
 	<div class="view-widget {{ viewName }} {{ displayName }}">
 		{# print the content without the styling fields #}
-	    {{ content|without('field_view_machine_name','field_display_machine_name') }}
+	    {{- content|without('field_view_machine_name','field_display_machine_name') -}}
 	</div>			
 {% endblock %}
 		
