--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/paragraph.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/00-base/paragraph.html.twig
@@ -57,33 +57,33 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
 %}
 
 {# add a wrapper if not a main section widget (used for in-section layout) #}
-{% if 'section' not in paragraph.bundle|clean_class %}
+{%- if 'section' not in paragraph.bundle|clean_class -%}
 	<div class="section-item"> 
-{% endif %}
+{%- endif -%}
 	{% block widget %}
 		{# set the default paragraph classes #}
 		<div{{ attributes.addClass(classes)  }}>
     		{% block widgetContent %}
     			{# print section title, intro and widget title outside of inner wrapper #}
-    			{{ content.field_section_title }}
- 				{{ content.field_section_intro }}
-    			{{ content.field_widget_title }}
+    			{{- content.field_section_title -}}
+ 				{{- content.field_section_intro -}}
+    			{{- content.field_widget_title -}}
 
     			{% block widgetInner %}
 	    			{# print an inner wrapper if not a section field #}
-	    			{% if 'section' not in paragraph.bundle|clean_class %}
+	    			{%- if 'section' not in paragraph.bundle|clean_class -%}
 	    				<div class="widget-wrapper">
-	    			{% endif %}
-	    					{{ content|without('field_widget_title','field_section_title','field_section_intro') }}
-	    			{% if 'section' not in paragraph.bundle|clean_class %}
+	    			{%- endif -%}
+	    					{{- content|without('field_widget_title','field_section_title','field_section_intro') -}}
+	    			{%- if 'section' not in paragraph.bundle|clean_class -%}
 	    				</div>
-	    			{% endif %}
+	    			{%- endif -%}
 	    		{% endblock %}
     			
     		{% endblock %}
 		</div>
 	{% endblock %}
 
-{% if 'section' not in paragraph.bundle|clean_class %}
+{%- if 'section' not in paragraph.bundle|clean_class -%}
 	</div>
-{% endif %}
+{%- endif -%}
