Update media permissions

--- a/web/themes/oc_patterns/templates/zzz-custom/user/field--user--name--user.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/user/field--user--name--user.html.twig
@@ -39,6 +39,6 @@
 
 {% extends 'field.html.twig' %}
 {% block fieldSingleNo %}
-  <h1>{{ item.content }}</h1>
+  <h1>{{- item.content -}}</h1>
 {% endblock %}
 
