--- a/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -41,6 +41,7 @@
 	font-style: italic;
 	font-size: 28px;
 	padding-bottom:10px;
+	margin-bottom: .5em;
 	@include tab{
 		font-size: 42px;
 		padding-bottom:0;
