--- a/web/themes/oc_patterns/templates/zzz-custom/widgets/accordions/paragraph--accordion-group.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/widgets/accordions/paragraph--accordion-group.html.twig
@@ -41,7 +41,7 @@
 {% block widgetContent %}
 	{{ attach_library('oc_patterns/accordion') }}
 
-	{{= content.field_widget_title =}}
+	{{- content.field_widget_title -}}
 
 	<div class="wrapper">
 		<div class="field field-accordion-item" aria-label="Accordion">
@@ -52,7 +52,7 @@
 					'#text': accordion['#paragraph'].field_oc_long_text.0.value,
 					'#format': accordion['#paragraph'].field_oc_long_text.0.format
 				 } %}
-				{% include "@organisms/01-widgets/accordion/01-accordion.twig" 
+				{% include "@organisms/01-widgets/accordion/01-accordion.twig"
 					with{
 						accordion_header: accordion['#paragraph'].field_accordion_header.value,
 						accordion_content: text,
