--- a/web/modules/custom/oc_custom/css/custom-global.css
+++ b/web/modules/custom/oc_custom/css/custom-global.css
@@ -414,6 +414,45 @@ body .button--primary.button--small{
 
 /* ADMIN TOOLBAR
 ------------------ */
+#toolbar-bar{
+  position: fixed !important;
+  width: 100%;
+}
+#toolbar-bar .toolbar-tab.env span.toolbar-item{
+  padding: 1em 1.333em;
+  font-weight: bold;
+  display: block;
+  background: rgba(255,255,255,0.8);
+  color: #000 !important;
+  cursor: default;
+}
+#toolbar-bar .toolbar-tab.env span.toolbar-item:hover{
+  text-decoration: none;
+}
+#toolbar-bar.local{
+  background-color: rgb(0,0,0);
+}
+#toolbar-bar.local .toolbar-tab .toolbar-item{
+  color: #ccc !important;
+}
+#toolbar-bar.dev{
+  background-color: rgb(0,128,0);
+}
+#toolbar-bar.dev .toolbar-tab .toolbar-item{
+  color: #fff !important;
+}
+#toolbar-bar.test{
+  background-color: rgb(217,153,1);
+}
+#toolbar-bar.test .toolbar-tab .toolbar-item{
+  color: #000 !important;
+}
+#toolbar-bar.live{
+  background-color: rgb(153,0,0);
+}
+#toolbar-bar.live .toolbar-tab .toolbar-item{
+  color: #fff !important;
+}
 .toolbar-tray-horizontal .menu-item--expanded{
 	background-color: #fff !important;
 }
