--- a/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/map/_map.scss
+++ b/web/themes/oc_patterns/components/_patterns/03-organisms/01-widgets/map/_map.scss
@@ -13,9 +13,18 @@
 			@include edgeToEdge;
 			@include calc(max-width, "100% + 40px");
 		}
+		//remove location title
+		.location-title{
+			display: none;
+		}
+		//style location content
+		.location-content{
+			font-family: $bodyFont;
+			font-size: 14px;
+			color: $body;
+		}
 	}
 }//end map widget
-
 
 /* PATTERN LAB ONLY
 --------------------- */
