Working on upstream edits - high priority

--- a/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
+++ b/web/themes/oc_patterns/components/_patterns/01-atoms/06-buttons/_default_buttons.scss
@@ -52,6 +52,11 @@
 //button class
 .button {
 	@include button;
+	max-width: 260px;
+	position: relative;
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 1.5em;
 }
 
 //outlineButtons
