--- a/web/themes/oc_patterns/components/css/cke.css
+++ b/web/themes/oc_patterns/components/css/cke.css
@@ -61,6 +61,7 @@ div.button{
 		display: block;
 		position: relative;
 		text-align: center;
+		max-width: 260px !important;
 }
 div.button a{
 	color: #fff;
