--- a/web/themes/oc_patterns/components/css/cke.css
+++ b/web/themes/oc_patterns/components/css/cke.css
@@ -62,6 +62,7 @@ div.button{
 		position: relative;
 		text-align: center;
 		max-width: 260px !important;
+		margin: 0 auto !important;
 }
 div.button a{
 	color: #fff;
