Update pattern lab block folder names, update search block

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -10,8 +10,14 @@
 <p>Macros set here define theming variables in their corresponding twig files in both Pattern Lab and Drupal.</p>
 
 
-{#######  HEADER VARIABLES  #######}
-
+{#######  SEARCH VARIABLES  #######}
+<div class="macro-tile">
+<p><strong>Search Block Style</strong></br>
+	VARIABLES= toggle, box</br>
+	Current= toggle
+</p>
+</div>
+{% macro searchBox() %}toggle{% endmacro %}
 
 
 {#######  FORM VARIABLES  #######}
