Fix fatal error for search block extending

--- a/web/themes/oc_patterns/templates/zzz-custom/search-page/block--views-exposed-filter-block--site-search-search-results.html.twig
+++ b/web/themes/oc_patterns/templates/zzz-custom/search-page/block--views-exposed-filter-block--site-search-search-results.html.twig
@@ -10,7 +10,7 @@
  */
 #}
 
-{% extends '@molecules/blocks/search-block/search-block-twig' %}
+{% extends '@molecules/blocks/search-block/search-block.twig' %}
 
 {% block searchInput %}
 	{{- content.search_api_fulltext -}}
