Add drupal wrapper block for route and js library holder to search block

--- a/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
+++ b/web/themes/oc_patterns/components/_patterns/00-base/global/05-macros/macros.twig
@@ -17,7 +17,7 @@
 	Current= toggle
 </p>
 </div>
-{% macro searchBox() %}toggle{% endmacro %}
+{% macro searchBox() %}box{% endmacro %}
 
 
 {#######  FORM VARIABLES  #######}
