--- a/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/_search-block.scss
+++ b/web/themes/oc_patterns/components/_patterns/02-molecules/blocks/search-block/_search-block.scss
@@ -47,17 +47,9 @@
 }
 
 
-.block-search-form-block{
+.search-form-outer{
 
 	//search icon
-	.t-search{
-		border: 1px solid transparent;
-		color: $black;
-		i{
-			position: relative;
-			font-size: 22px;
-		}
-	}
 	.t-search-wrapper{
 		&:hover,&:focus{
 			i:after{
@@ -71,7 +63,20 @@
 				background: $black;
 			}
 		}
-	}
+		.t-search{
+			border: 1px solid transparent;
+			color: $black;
+			i{
+				position: relative;
+				font-size: 22px;
+			}
+		}
+		.box &{
+			@include deskMenu{
+				display: none;
+			}
+		}
+	}//end t-search-wrapper
 
 	//close search
 	.t-search-close{
@@ -108,6 +113,11 @@
 			width: 100%;
 			text-align: center;
 		}
+		.box &{
+			@include deskMenu{
+				display: none;
+			}
+		}
 	}//end search close
 
 
@@ -123,7 +133,15 @@
 			@include calc(left, "-50vw + 620px");
 			width: 100vw;
 		}
-	}
+		.box &{
+			@include deskMenu{
+				display: block !important;
+				left: auto;
+				right: 0;
+				max-width: 280px;
+			}
+		}
+	}//end search-form-wrapper
 
 	//put search form at top of screen and full width
 	#views-exposed-form-site-search-search-results {
@@ -134,6 +152,12 @@
 		background: rgba(35,35,35,0.97);
 		@include deskMenu{
 			padding: 160px 20px;
+		}
+		.box &{
+			@include deskMenu{
+				padding: 0;
+				background: none;
+			}
 		}
 
 		//search box input
@@ -166,6 +190,18 @@
 				&:focus{
 					outline: 1px solid $white;
 					@extend %searchBlockPlaceholderFocus;
+				}
+				.box &{
+					@include deskMenu{
+						color: $black;
+						border-bottom-color: $black;
+						font-size: 16px;
+						@include placeholder;
+						&:focus{
+							outline: 1px solid $grey;
+							@include placeholderFocus;
+						}
+					}
 				}
 			}
 		}//end fulltext search
@@ -207,6 +243,14 @@
 					font-size: 28px;
 					top: -48px;
 					right: 12px;
+				}
+				.box &{
+					@include deskMenu{
+						color: $black;
+						font-size: 24px;
+						top: -42px;
+						right: 8px;
+					}
 				}
 			}
 		}//end form-actions
